<resources>
    <string name="app_name">UMBC IoT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_clear">Clear</string>
    <string name="check_again_button_text">Check again!</string>
    <string name="no_beacons_found_yet_text">No beacons found yet!</string>
    <string name="discover_nearby_devices">Discover</string>
    <string name="permission_denied_explanation">You denied ACCESS_FINE_LOCATION permission. This might disrupt some functionality!</string>
    <string name="permission_rationale">Can\'t work without location</string>
    <string name="ok">Okay</string>
    <string name="settings">Settings</string>
    <string name="ble_not_supported">BLE hardware missing on device</string>

    <string name="default_display_text">What do you want to know about UMBC?</string>
    <string name="default_no_data_display_text">We are not getting any data from the beacons. Are you sure they are working?</string>
    <string name="help_text">UMBC IoT Project Android Client\n
* In the current mode of deployment, the app will work, if you are near one of our beacons in the Information Technology and Engineering building at UMBC.\n
* If you are near one of them, you will be able to query our Knowledge Base using voice commands or through text input.\n
* It\'s an AMA app, enabling you to ask queries about UMBC.</string>
    <string name="info_display_text">Hmmm&#8230; Can\'t connect to any Beacons. If you think you should see one anyway, click on the button below.</string>
    <string name="query_hint">Type your query here&#8230;</string>
    <string name="send_query_to_server_image_button_content_description_text">Click this button to send the query to server</string>
    <string name="thumb_up_text">Good answer</string>
    <string name="thumb_down_text">Bad answer</string>

    <string name="feedback_dialog_title">Send feedback</string>
    <string name="feedback_hint">Type your feedback or leave blank for no feedback</string>
    <string name="submit_feedback">Submit</string>

    <string name="title_activity_alternate_main">No beacons found</string>
    <string name="title_activity_device_scan">DeviceScanActivity</string>

    <string name="action_voice_query">Ask me anything!</string>

    <string name="dept_email">dept@cs.umbc.edu</string>
    <string name="app_icon">App icon</string>

    <!-- Strings related to Settings -->
    <string name="preference_header_beacon">Beacon pref</string>

    <string name="pref_beacon_disabled_key">beaconDisabledKey</string>
    <string name="pref_title_disable_beacon_scanning">Disable beacon scanning</string>
    <string name="pref_summary_disable_beacon_scanning">Check the box to ask queries without obtaining context from beacons</string>

    <string name="preference_header_user">User pref</string>

    <string name="pref_enable_user_id_key">enableUserIdKey</string>
    <string name="pref_title_enable_user_identity">Enable user identification</string>
    <string name="pref_summary_enable_user_identity">Swipe to enable user identification</string>

    <string name="pref_user_id_key">userIdKey</string>
    <string name="pref_title_user_identity">Add user identity</string>
    <string name="pref_summary_user_identity">Click to enter user identity info. Currently user id is set as: </string>

    <string name="pref_user_id_default_value">anon</string>

    <!-- Strings related to Drawer Menu -->
    <string name="voice_interface_menu_text">Voice interface</string>
    <string name="text_interface_menu_text">Text Interface</string>
    <string name="setting_menu_text">Settings</string>
    <string name="help_feedback_menu_text">Help &amp; Feedback</string>
    <string name="title_activity_help_feedback">Help &amp; Feedback</string>
</resources>