<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:enabled="false"
        android:title="@string/preference_header_beacon">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_beacon_disabled_key"
            android:summary="@string/pref_summary_disable_beacon_scanning"
            android:title="@string/pref_title_disable_beacon_scanning" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_header_user">
        <SwitchPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="@string/pref_enable_user_id_key"
            android:summary="@string/pref_summary_enable_user_identity"
            android:title="@string/pref_title_enable_user_identity" />
        <EditTextPreference
            android:defaultValue="@string/pref_user_id_default_value"
            android:enabled="false"
            android:key="@string/pref_user_id_key"
            android:summary="@string/pref_summary_user_identity"
            android:title="@string/pref_title_user_identity" />
    </PreferenceCategory>
</PreferenceScreen>
